--- a/index.html
+++ b/index.html
@@ -112,8 +112,7 @@ header h1{margin:0 0 10px 0;font-size:18px;color:var(--green)}
 }
 .btn:hover{background:#063b22}
 .btn:active{transform:translate(2px,2px);box-shadow:none}
-.btn.objection{background:var(--green);color:#000}
-.log{font-size:9px;max-height:240px;overflow:auto}
+.btn.objection { background: inherit; color: inherit; }.log{font-size:9px;max-height:240px;overflow:auto}
 .log div{margin-bottom:6px}
 .good{color:var(--green)}
 .bad{color:var(--red)}
@@ -355,10 +354,10 @@ function applyCaseColor(color){
   // All buttons — objection buttons background + border, NO OBJECTION text + border
   document.querySelectorAll('.btn').forEach(el => {
     el.style.borderColor = color;
-    if(el.classList.contains('objection')){
-      el.style.background = color; // Objection button background
-      el.style.color = '#000';     // Text stays black
-    } else {
+   if(el.classList.contains('objection')){
+  el.style.background = color; // Objection button background
+  el.style.color = '#000';     // optional: you can switch to color for dynamic
+} else {
       el.style.background = '#02140a'; // dark background
       el.style.color = color;          // text changes
     }
