--- a/index.html
+++ b/index.html
@@ -318,33 +318,34 @@ function nextCase() {
   updateStats();
 }
 
-function object(type){
+ffunction object(type){
   if(type) objections--;
 
   let explanation = '';
 
-  if(type===current.c){
+  if(type === current.c){ // player picked the correct objection
     streak++;
     credibility += 5;
-    explanation = getExplanation(type, true, current.text);
+    explanation = getExplanation(current.c, true, current.text);
     logMsg(`CORRECT OBJECTION: ${type}\n${explanation}`, 'good');
-  } else if(type===null){
-  if(current.c===null){
-    streak++;
-    credibility += 5;
-    logMsg(`CORRECT: No Objection needed! ✅`, 'good');
-  } else {
-    credibility -= 10;
-    streak = 0;
-    explanation = getExplanation(current.c, false, current.text);
-    logMsg(`MISSED OBJECTION. SHOULD HAVE BEEN ${current.c}\n${explanation}`, 'bad');
-  }
-}
- else {
+
+  } else if(type === null){ // player clicked No Objection
+    if(current.c === null){ // actually no objection needed
+      streak++;
+      credibility += 5;
+      logMsg(`CORRECT: No Objection needed! ✅`, 'good');
+    } else { // they missed a real objection
+      credibility -= 10;
+      streak = 0;
+      explanation = getExplanation(current.c, false, current.text); // <-- use current.c here
+      logMsg(`MISSED OBJECTION. SHOULD HAVE BEEN ${current.c}\n${explanation}`, 'bad');
+    }
+
+  } else { // wrong objection
     credibility -= 15;
     streak = 0;
-    explanation = getExplanation(type, false, current.text);
-    logMsg(`WRONG OBJECTION (${type})\n${explanation}`, 'bad');
+    explanation = getExplanation(current.c, false, current.text); // <-- use current.c here
+    logMsg(`WRONG OBJECTION (${type})\nCorrect was: ${current.c}\n${explanation}`, 'bad');
   }
 
   if(credibility <= 0 || objections <= 0){
@@ -366,6 +367,7 @@ function object(type){
 
   nextCase();
 }
+
 
 function getExplanation(objectionType, isCorrect, text) {
   const reasons = {
