--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@ function nextCase() {
   updateStats();
 }
 
-ffunction object(type){
+function object(type){
   if(type) objections--;
 
   let explanation = '';
