--- a/index.html
+++ b/index.html
@@ -71,6 +71,15 @@ body{
   );
   pointer-events:none;
 }
+#screen::after {
+  animation: scanWarp 3s linear infinite;
+}
+
+@keyframes scanWarp {
+  0% { background-position-y: 0; }
+  100% { background-position-y: 6px; }
+}
+
 
 /* CRT MAGIC CARPET BEND */
 #screen::marker { display:none; }
@@ -143,10 +152,62 @@ header h1{margin:0 0 10px 0;font-size:18px;color:var(--green)}
 .bad{color:var(--red)}
 .info{color:var(--yellow)}
 footer{text-align:center;font-size:8px;opacity:0.7}
+
+/* ===============================
+   EXTREME MAGIC CARPET CRT
+================================ */
+
+#screen-wrap {
+  perspective: 1400px;
+}
+
+#screen {
+  position: relative;
+  transform-style: preserve-3d;
+  animation: crtBreath 6s ease-in-out infinite;
+  filter: contrast(1.2) saturate(1.3);
+}
+
+/* STRONG BARREL CURVE */
+#screen::before {
+  content:"";
+  position:absolute;
+  inset:-6%;
+  background: radial-gradient(
+    ellipse at center,
+    rgba(255,255,255,0.04) 0%,
+    rgba(0,0,0,0.85) 70%
+  );
+  transform:
+    scaleX(1.18)
+    scaleY(1.12);
+  pointer-events:none;
+}
+
+/* RGB EDGE SPLIT */
+#screen::after {
+  content:"";
+  position:absolute;
+  inset:0;
+  background: transparent;
+  box-shadow:
+    -3px 0 rgba(255,0,0,0.15),
+     3px 0 rgba(0,255,255,0.15);
+  mix-blend-mode: screen;
+  pointer-events:none;
+}
+
+/* SCREEN BREATH */
+@keyframes crtBreath {
+  0%   { transform: scale(1.01); }
+  50%  { transform: scale(1.035); }
+  100% { transform: scale(1.01); }
+}
+
 </style>
 </head>
 <body>
-<div id="crt"><div id="screen"><div id="game">
+<div id="crt"><div id="screen-wrap">   <div id="screen"><div id="game">
 <header>
   <h1>OBJECTION ROGUE</h1>
   <div id="stats"></div>
@@ -155,7 +216,7 @@ footer{text-align:center;font-size:8px;opacity:0.7}
 <div class="panel"><div class="buttons" id="actions"></div></div>
 <div class="panel log" id="log"></div>
 <footer>8-BIT CRT COURTROOM // INSPIRED BY OBJECTION! (1992)</footer>
-</div></div></div>
+</div></div></div></div>
 
 
 <footer>
@@ -476,27 +537,27 @@ window.addEventListener('mousemove', (e) => {
 let time = 0;
 
 function animateParallax() {
-  time += 0.01;
+  time += 0.015;
 
-  currentRotX += (targetRotX - currentRotX) * easeFactor;
-  currentRotY += (targetRotY - currentRotY) * easeFactor;
+  currentRotX += (targetRotX - currentRotX) * 0.08;
+  currentRotY += (targetRotY - currentRotY) * 0.08;
 
-  const waveX = Math.sin(time) * 1.2;
-  const waveY = Math.cos(time * 0.8) * 1.2;
+  const waveX = Math.sin(time) * 4.5;
+  const waveY = Math.cos(time * 0.7) * 4.5;
+
+  const bendX = Math.sin(time * 0.4) * 1.8;
+  const bendY = Math.cos(time * 0.5) * 1.8;
 
   screenEl.style.transform = `
-    perspective(900px)
-    rotateX(${(currentRotX + waveY).toFixed(3)}deg)
-    rotateY(${(currentRotY + waveX).toFixed(3)}deg)
-    scaleX(1.02)
-    scaleY(0.98)
+    rotateX(${currentRotX + waveY}deg)
+    rotateY(${currentRotY + waveX}deg)
+    rotateZ(${bendX}deg)
+    scaleX(1.08)
+    scaleY(0.94)
   `;
 
   requestAnimationFrame(animateParallax);
 }
-
-
-animateParallax();
 
 
 // -------- START --------
